Fixed: DatePicker is overlapped
Bootstrap update brought `z-index: 1` for `custom-controls`, which affected datepicker.

--- a/src/app/keyring/components/DatePicker.scss
+++ b/src/app/keyring/components/DatePicker.scss
@@ -127,5 +127,6 @@ $datepicker__margin: map-get($spacers, 2);
   box-shadow: $input-box-shadow;
 }
 
-
-  
+.react-datepicker-popper {
+  z-index: 10 !important;
+}
